added headers and cors
